test/compile-fail/unbounded_1.lisp
; test unbouned
(let ((x 1)) (print y))